WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15073
REGRESSION: Often can't drag text out of textareas.
https://bugs.webkit.org/show_bug.cgi?id=15073
Summary
REGRESSION: Often can't drag text out of textareas.
Adele Peterson
Reported
2007-08-24 13:36:35 PDT
In the attached test case, select the word "test" and try to drag it out of the textarea and into the text field. I think this is caused by the change in hit testing for text controls. Now we get the inner div as the hit test result, and when EventHandler::shouldDragAutoNode gets called (eventually on the textarea itself), it fails because the textarea isn't a leaf node. <
rdar://problem/5426557
>
Attachments
testcase
(42 bytes, text/html)
2007-08-24 13:37 PDT
,
Adele Peterson
no flags
Details
patch
(1.96 KB, patch)
2007-08-24 19:36 PDT
,
Adele Peterson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adele Peterson
Comment 1
2007-08-24 13:37:55 PDT
Created
attachment 16109
[details]
testcase
mitz
Comment 2
2007-08-24 17:06:50 PDT
(In reply to
comment #0
)
> I think this is caused by the change in hit testing for text controls. Now we > get the inner div as the hit test result, and when > EventHandler::shouldDragAutoNode gets called (eventually on the textarea > itself), it fails because the textarea isn't a leaf node.
I agree. I think the special hit-testing should be reserved to text controls while they're actually displaying placeholder text. I am going to make that patch.
Adele Peterson
Comment 3
2007-08-24 19:36:26 PDT
Created
attachment 16114
[details]
patch I took a stab at this... Still needs a layout test though. Passes existing tests.
mitz
Comment 4
2007-08-24 23:30:13 PDT
Comment on
attachment 16114
[details]
patch r=me assuming you add a test
Adele Peterson
Comment 5
2007-08-25 09:41:19 PDT
Committed revision 25245.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug