WebCore:

Reviewed by Mitz.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=15073
        <rdar://problem/5426557> REGRESSION: Can no longer drag text from textareas

        Test: fast/forms/drag-out-of-textarea.html

        * rendering/RenderTextControl.cpp: (WebCore::RenderTextControlInnerBlock::nodeAtPoint):
          Only restricts hit testing if the placeholder text is visible.
        * rendering/RenderTextControl.h: (WebCore::RenderTextControl::placeholderIsVisible): Added.

LayoutTests:

        Reviewed by Mitz.

        Test for http://bugs.webkit.org/show_bug.cgi?id=15073
        <rdar://problem/5426557> REGRESSION: Can no longer drag text from textareas

        * fast/forms/drag-out-of-textarea-expected.txt: Added.
        * fast/forms/drag-out-of-textarea.html: Added.



Canonical link: https://commits.webkit.org/19739@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25245 268f45cc-cd09-0410-ab3c-d52691b4dbfc